[gd_scene load_steps=5 format=4 uid="uid://308qu6h28a52"]

[ext_resource type="TileSet" uid="uid://d2djowik1134k" path="res://resources/pipes.tres" id="1_nm0jv"]
[ext_resource type="Script" path="res://scripts/pipe.gd" id="1_o7pxw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7y8j4"]
size = Vector2(30.5, 595.031)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mf6wy"]
size = Vector2(7, 206)

[node name="Pipe" type="Node2D"]
script = ExtResource("1_o7pxw")

[node name="Pipes" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAUAAAAAAACAAAAAAAVAAAAAAADAAAAAAAUAAEAAAACAAEAAAAVAAEAAAADAAEAAAAUAAIAAAACAAEAAAAVAAIAAAADAAEAAAAUAAMAAAACAAEAAAAVAAMAAAADAAEAAAAUAAQAAAACAAEAAAAVAAQAAAADAAEAAAAUAAUAAAACAAEAAAAVAAUAAAADAAEAAAAUAAYAAAACAAEAAAAVAAYAAAADAAEAAAAUAAcAAAACAAEAAAAVAAcAAAADAAEAAAAUAAgAAAACAAEAAAAVAAgAAAADAAEAAAAUAAkAAAACAAEAAAAVAAkAAAADAAEAAAAUAAoAAAACAAEAAAAVAAoAAAADAAEAAAAUAAsAAAACAAEAAAAVAAsAAAADAAEAAAAUAAwAAAACAAEAAAAVAAwAAAADAAEAAAAUAA0AAAACAAEAAAAVAA0AAAADAAEAAAAUAA4AAAACAAEAAAAVAA4AAAADAAEAAAAUAA8AAAACAAEAAAAVAA8AAAADAAEAAAAUABAAAAACAAEAAAAVABAAAAADAAEAAAAUABEAAAACAAEAAAAVABEAAAADAAEAAAAUABIAAAACAAEAAAAVABIAAAADAAEAAAAUABMAAAACAAEAAAAVABMAAAADAAEAAAAUABQAAAACAAEAAAAVABQAAAADAAEAAAAUABUAAAACAAEAAAAVABUAAAADAAEAAAAUABYAAAACAAEAAAAVABYAAAADAAEAAAAUABcAAAACAAEAAAAVABcAAAADAAEAAAAUABgAAAACAAEAAAAVABgAAAADAAEAAAAUABkAAAACAAEAAAAVABkAAAADAAEAAAAUABoAAAACAAEAAAAVABoAAAADAAEAAAAUABsAAAACAAEAAAAVABsAAAADAAEAAAAUABwAAAACAAEAAAAVABwAAAADAAEAAAAUAB0AAAACAAEAAAAVAB0AAAADAAEAAAAUAB4AAAACAAEAAAAVAB4AAAADAAEAAAAUAB8AAAACAAIAAAAVAB8AAAADAAIAAAAUAEcAAAACAAIAAAAVAEcAAAADAAIAAAAUAEYAAAACAAEAAAAVAEYAAAADAAEAAAAUAEUAAAACAAEAAAAVAEUAAAADAAEAAAAUAEQAAAACAAEAAAAVAEQAAAADAAEAAAAUAEMAAAACAAEAAAAVAEMAAAADAAEAAAAUAEIAAAACAAEAAAAVAEIAAAADAAEAAAAUAEEAAAACAAEAAAAVAEEAAAADAAEAAAAUAEAAAAACAAEAAAAVAEAAAAADAAEAAAAUAD8AAAACAAEAAAAVAD8AAAADAAEAAAAUAD4AAAACAAEAAAAVAD4AAAADAAEAAAAUAD0AAAACAAEAAAAVAD0AAAADAAEAAAAUADwAAAACAAEAAAAVADwAAAADAAEAAAAUADsAAAACAAEAAAAVADsAAAADAAEAAAAUADoAAAACAAEAAAAVADoAAAADAAEAAAAUADkAAAACAAEAAAAVADkAAAADAAEAAAAUADgAAAACAAEAAAAVADgAAAADAAEAAAAUADcAAAACAAEAAAAVADcAAAADAAEAAAAUADYAAAACAAEAAAAVADYAAAADAAEAAAAUADUAAAACAAEAAAAVADUAAAADAAEAAAAUADQAAAACAAEAAAAVADQAAAADAAEAAAAUADMAAAACAAEAAAAVADMAAAADAAEAAAAUADIAAAACAAEAAAAVADIAAAADAAEAAAAUADEAAAACAAEAAAAVADEAAAADAAEAAAAUADAAAAACAAEAAAAVADAAAAADAAEAAAAUAC8AAAACAAEAAAAVAC8AAAADAAEAAAAUAC4AAAACAAEAAAAVAC4AAAADAAEAAAAUAC0AAAACAAAAAAAVAC0AAAADAAAAAAA=")
tile_set = ExtResource("1_nm0jv")

[node name="Top" type="Area2D" parent="."]

[node name="TopCollision" type="CollisionShape2D" parent="Top"]
position = Vector2(335.75, 213.031)
shape = SubResource("RectangleShape2D_7y8j4")

[node name="ScoringZone" type="Area2D" parent="."]

[node name="ScoringZoneCollision" type="CollisionShape2D" parent="ScoringZone"]
position = Vector2(334.5, 615)
shape = SubResource("RectangleShape2D_mf6wy")

[node name="Bottom" type="Area2D" parent="."]

[node name="BottomCollision" type="CollisionShape2D" parent="Bottom"]
position = Vector2(335, 1016.52)
shape = SubResource("RectangleShape2D_7y8j4")

[connection signal="body_entered" from="Top" to="." method="_on_top_body_entered"]
[connection signal="body_shape_entered" from="ScoringZone" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_entered" from="Bottom" to="." method="_on_bottom_body_entered"]
